--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,11 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "prisma": "^6.10.1" 
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.10.1"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
