--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
-    "prisma": "^6.10.1"
+    "nodemailer": "^7.0.6",
+    "prisma": "^6.10.1",
+    "twilio": "^5.9.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
